--- a/index.html
+++ b/index.html
@@ -726,87 +726,54 @@
 <!-- End Ticker Section with Famous Swift Lines -->
 
 
-<!-- Ticker for hackathon section -->
-<div style="overflow: hidden; background-color: #ff5733; padding: 10px 0; margin-top: 30px; width: 100%;">
-    <div style="white-space: nowrap; display: flex; animation: ticker 27s linear infinite;">
-        <h4 style="color: white; font-size: 18px; margin: 0 50px;">Beginner and experienced students are welcome to apply.</h4>
-        <h4 style="color: white; font-size: 18px; margin: 0 50px;">Join us for an exciting hackathon experience!</h4>
-        <h4 style="color: white; font-size: 18px; margin: 0 50px;">Network, build, and innovate with top student engineers!</h4>
-    </div>
-</div>
 
-<!-- Ticker Animation -->
-<style>
-    @keyframes ticker {
-        0% { transform: translateX(100%); }
-        100% { transform: translateX(-100%); }
-    }
-</style>
 
 <p></p>
 
-<!-- Flyer & Collaborators Section -->
-<div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
-
-
-    
-    <!-- First Flyer -->
-    <div style="text-align: center; max-width: 300px;">
-        <div>
-            <img src="https://github.com/user-attachments/assets/b8da7f23-5c5e-4c9e-a6ae-2deee94ef7c3" alt="305 Tropical Hacks Flyer" style="width: 100%; height: auto;">
+<section style="padding: 50px; text-align: center;">
+    <!-- Flyer & EST. 2025 Section -->
+    <div style="display: flex; justify-content: center; align-items: center; gap: 40px; flex-wrap: wrap;">
+        <!-- EST. 2025 Logo (on the side) -->
+        <div style="display: flex; flex-direction: column; align-items: center;">
+            <img src="https://github.com/user-attachments/assets/30568fdc-c31d-4260-8a24-7e62db85451a" 
+                 alt="Hibiscus Flower" 
+                 style="width: 80px; height: auto;">
+            <div style="font-size: 24px; font-weight: bold; color: #FF4D00;">EST. 2025</div>
         </div>
-        <h3 style="margin-top: 20px; font-size: 18px;">FIU ORGs Collaborators</h3>
-        <ul style="text-align: left; padding-left: 20px;">
-            <!-- 1--><li>1. Panther Robotics @ FIU</li>
-            <!-- 2--><li>2. National Society of Black Engineers (NSBE)</li>
-            <!-- 3--><li>3. Women in CyberSecurity (WiCyS)</li>
-            <!-- 4--><li>4. SWE FIU (Society of Women Engineers)</li>
-            <!-- 5--><li>5. Society of Hispanic Professional Engineers (SHPE)</li>
-            <!-- 6--><li>6. ALPFA FIU (Association of Latino Professionals for America)</li>
-            <!-- 7--><li>7. Artificial Intelligence Organization (AIO)</li>
-            <!-- 8--><li>8. AIS FIU (Association for Information Systems)</li>
-            <!-- 9--><li>9. ERS FIU (Engineers Research Society)</li>
-            <!-- 10--><li>10. 🌈 Pride Student Union</li>
-            <!-- 11--><li>11. Florida Engineering Society (FES FIU)</li>
-            <!-- 12--><li>12. International Business Honors Society (IBHS)</li>
-            <!-- 13--><li>13. American Marketing Association (AMA)</li>
-            <!-- 14--><li>14. Dean’s Student Advisory Board (DSAB)</li>
-            <!-- 15--><li><li>15. Workshop - Collaborator: Women in Computer Science (WiCS)</li>
-        </ul>
-        <div style="margin-top: 15px;">
-            <a href="305HACK-SPRING25.html" style="display: inline-block; padding: 8px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; font-weight: bold;">Register Now</a>
+
+        <!-- Spring 2025 Flyer -->
+        <div style="text-align: center; max-width: 400px;">
+            <img src="https://github.com/user-attachments/assets/b8da7f23-5c5e-4c9e-a6ae-2deee94ef7c3" 
+                 alt="305 Tropical Hacks Flyer 1ST" 
+                 style="width: 100%; height: auto; border-radius: 10px;">
+ 
+        </div>
+
+        <!-- Fall 2025 Flyer -->
+        <div style="text-align: center; max-width: 400px;">
+            <img src="https://github.com/user-attachments/assets/5de3c9d5-b7a0-4677-ad8c-fa68d21b580f" 
+                 alt="305 Tropical Hacks Flyer" 
+                 style="width: 100%; height: auto; border-radius: 10px;">
+ 
         </div>
     </div>
 
-    <!-- Second Flyer -->
-    <div style="text-align: center; max-width: 300px;">
-        <div>
-            <img src="https://github.com/user-attachments/assets/5de3c9d5-b7a0-4677-ad8c-fa68d21b580f" alt="305 Fall Hacks Flyer 2" style="width: 100%; height: auto;">
-        </div>
-        <h3 style="margin-top: 20px; font-size: 18px;">FIU ORGs Collaborators</h3>
-        <ul style="text-align: left; padding-left: 20px;">
-            <!-- 1--><li>1. Panther Robotics @ FIU</li>
-            <!-- 2--><li>2. National Society of Black Engineers (NSBE)</li>
-            <!-- 3--><li>3. Women in CyberSecurity (WiCyS)</li>
-            <!-- 4--><li>4. SWE FIU (Society of Women Engineers)</li>
-            <!-- 5--><li>5. Society of Hispanic Professional Engineers (SHPE)</li>
-            <!-- 6--><li>6. ALPFA FIU (Association of Latino Professionals for America)</li>
-            <!-- 7--><li>7. Artificial Intelligence Organization (AIO)</li>
-            <!-- 8--><li>8. AIS FIU (Association for Information Systems)</li>
-            <!-- 9--><li>9. ERS FIU (Engineers Research Society)</li>
-            <!-- 10--><li>10. 🌈 Pride Student Union</li>
-            <!-- 11--><li>11. Florida Engineering Society (FES FIU)</li>
-            <!-- 12--><li>12. International Business Honors Society (IBHS)</li>
-            <!-- 13--><li>13. American Marketing Association (AMA)</li>
-            <!-- 14--><li>14. Dean’s Student Advisory Board (DSAB)</li>
-            <!-- 15--><li><li>15. Workshop - Collaborator: Women in Computer Science (WiCS)</li>
-        </ul>
-        <div style="margin-top: 15px;">
-            <a href="305HACK-FALL25.html" style="display: inline-block; padding: 8px 15px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; font-weight: bold;">Register Now</a>
-        </div>
+    <!-- Register Now Button -->
+    <div style="margin-top: 50px;">
+        <a href="305HACK-SPRING25.html" 
+           style="display: inline-block; padding: 15px 40px; font-size: 1.5rem; font-weight: bold; 
+                  text-decoration: none; border-radius: 25px; background: #FF4D00; color: white; 
+                  box-shadow: 4px 4px 0px #B33200; transition: all 0.3s ease-in-out;" 
+           onmouseover="this.style.background='#FB8500'; 
+                        this.style.boxShadow='6px 6px 0px #FFFFFF'; 
+                        this.style.transform='translateY(-3px)';"
+           onmouseout="this.style.background='#FF4D00'; 
+                       this.style.boxShadow='4px 4px 0px #B33200'; 
+                       this.style.transform='translateY(0)';">
+           Register Now
+        </a>
     </div>
-</div>
-
+</section>
 
 
 
