--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         height: 300px;
       }
         /* end Logo section styles */
-        
+
       /* Navigation link styles with hover highlighting */
     
 
@@ -368,7 +368,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="CC-Membership.HTML" style="padding:10px 15px;">Graphic</a>
+                <a class="nav-link" href="CC-Membership.HTML" style="padding:10px 15px;">Club Graphics</a>
               </li>
 
           </ul>
