--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -672,6 +672,8 @@ body {
                 <li class="nav-item"><a class="nav-link" href="#awards">Awards</a></li>
                 <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contributors">Contributors</a></li>
+                <li class="nav-item"><a class="nav-link" href="CC-GRAPHIC-305.HTML">305 Graphics</a></li>
+                
             </ul>
         </div>
     </div>
