--- a/CC-Membership.HTML
+++ b/CC-Membership.HTML
@@ -162,7 +162,7 @@
           </li>
           <!-- Graphics-->
           <li class="nav-item">
-              <a class="nav-link" href="CC-Membership.HTML" style="padding:10px 15px;">Graphic</a>
+              <a class="nav-link" href="CC-Membership.HTML" style="padding:10px 15px;">Club Graphics</a>
             </li>
 
         </ul>
