--- a/about.html
+++ b/about.html
@@ -207,13 +207,32 @@
               </div>
             </div>
           </div>
+
+          <!-- Ashley Prado -->
+          <div class="col-lg-4 col-md-6 mb-5" data-aos="fade-up">
+            <div class="card h-100">
+              <img class="card-img-top" src="https://github.com/user-attachments/assets/b39b7a78-c1c8-407d-b073-998fcf1aaa34" alt="Ashley Prado - Tech Lead" />
+              <div class="card-body">
+                <h5 class="fw-bold">Ashley Prado</h5>
+                <p class="mb-0">Vice President & Tech Engagement Chair C11</p>
+                <p class="mb-2 text-muted">Pronouns: She/Her</p>
+                <p class="mt-3">Junior @FIU majoring in Computer Science</p>
+                <p class="mt-3">Ashley is dedicated to using technology to solve real-world problems and empower her community.</p>
+                <a href="https://www.linkedin.com/in/ashley-prado/" target="_blank" class="linkedin-icon">
+                  <i class="bi bi-linkedin"></i> LinkedIn
+                </a>
+              </div>
+            </div>
+          </div>
+
+
           <!-- Amilcar -->
           <div class="col-lg-4 col-md-6 mb-5" data-aos="fade-up">
             <div class="card h-100">
               <img class="card-img-top" src="https://github.com/ba-00001/imagesforWEB-1/blob/main/vice-president.jpg?raw=true" alt="Amilcar Pena - Vice President" />
               <div class="card-body">
                 <h5 class="fw-bold">Amilcar Pena</h5>
-                <p class="mb-0">Vice President & Tech Engagement Chair C1 | C2</p>
+                <p class="mb-0">Founder & Tech Engagement Chair C1 | C2</p>
                 <p class="mb-2 text-muted">Pronouns: He/Him</p>
                 <p class="mt-3">Rising Junior @FIU majoring in Computer Science.</p>
                 <a href="https://www.linkedin.com/in/amilcarjpena/" target="_blank" class="linkedin-icon">
@@ -350,22 +369,7 @@
               </div>
             </div>
           </div>
-          <!-- Ashley Prado -->
-          <div class="col-lg-4 col-md-6 mb-5" data-aos="fade-up">
-            <div class="card h-100">
-              <img class="card-img-top" src="https://github.com/user-attachments/assets/b39b7a78-c1c8-407d-b073-998fcf1aaa34" alt="Ashley Prado - Tech Lead" />
-              <div class="card-body">
-                <h5 class="fw-bold">Ashley Prado</h5>
-                <p class="mb-0">Tech Engagement Chair C11</p>
-                <p class="mb-2 text-muted">Pronouns: She/Her</p>
-                <p class="mt-3">Junior @FIU majoring in Computer Science</p>
-                <p class="mt-3">Ashley is dedicated to using technology to solve real-world problems and empower her community.</p>
-                <a href="https://www.linkedin.com/in/ashley-prado/" target="_blank" class="linkedin-icon">
-                  <i class="bi bi-linkedin"></i> LinkedIn
-                </a>
-              </div>
-            </div>
-          </div>
+
           <!-- Gabriela Machado -->
           <div class="col-lg-4 col-md-6 mb-5" data-aos="fade-up">
             <div class="card h-100">
