--- a/about.html
+++ b/about.html
@@ -280,7 +280,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/715871d8-3d0f-48b9-9983-020dce3e1a7f" alt="Arnold Miranda-Pino - Tech Lead" />
               <div class="card-body">
                 <h5 class="fw-bold">Arnold Miranda-Pino</h5>
-                <p class="mb-0">Tech Engagement Chair C3 | C4</p>
+                <p class="mb-0">Dir. of Operations & Tech Engagement Chair C3 | C4</p>
                 <p class="mb-2 text-muted">Pronouns: He/Him</p>
                 <p class="mt-3">Junior @FIU majoring in Computer Science.</p>
                 <p class="mt-3">Arnold, of Cuban descent, is passionate about web and app development and enjoys working with TypeScript. He has supported new students and helped design a mobile app workshop using Agile methods.</p>
