--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -22,26 +22,64 @@
             font-family: 'Poppins', sans-serif;
             text-align: center;
             overflow-x: hidden;
+            padding-top: 80px; /* Adjust this based on navbar height */
         }
 
         /* Navbar */
-        .navbar {
-            background: linear-gradient(135deg, #0073e6, #00bfa5);
-            padding: 15px;
-        }
-        .navbar-brand {
-            font-size: 2rem;
-            font-weight: bold;
-            color: white;
-        }
-        .navbar-nav .nav-link {
-            color: white;
-            font-size: 1.1rem;
-            padding: 8px 15px;
-        }
-        .navbar-nav .nav-link:hover {
-            color: #ffcc00;
-        }
+        /* 🔹 Navbar Styles */
+.navbar {
+    background: linear-gradient(135deg, #008000, #004d00); /* Green Gradient */
+    padding: 15px;
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar-brand {
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: white;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+.navbar-brand .logo {
+    height: 50px;
+    width: auto;
+    margin-right: 10px;
+}
+
+.navbar-nav .nav-link {
+    color: white !important;
+    font-size: 1.1rem;
+    padding: 10px 15px;
+    transition: color 0.3s ease, transform 0.2s;
+}
+
+.navbar-nav .nav-link:hover {
+    color: #ffcc00 !important; /* Yellow highlight on hover */
+    transform: scale(1.1);
+}
+
+/* 🔹 Mobile Menu Toggle Button */
+.navbar-toggler {
+    border-color: white;
+}
+
+.navbar-toggler-icon {
+    filter: invert(1); /* Makes it white */
+}
+
+/* 🔹 Responsive Design */
+@media (max-width: 768px) {
+    .navbar-nav {
+        text-align: center;
+    }
+    .navbar-nav .nav-link {
+        padding: 10px;
+    }
+}
+/* END NAV BAR CSS */
+
 
         /* Title & Sun Container */
         .title-container {
@@ -652,10 +690,15 @@ body {
 <body>
 
 <!-- NAVIGATION MENU -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3 px-3">
+<nav class="navbar navbar-expand-lg fixed-top py-3 px-3" style="background: linear-gradient(135deg, #0073e6, #00bfa5);">
+
     <div class="container">
         <!-- Brand Name -->
-        <a class="navbar-brand fw-bold" href="#">305 Hackathon</a>
+          <!-- Logo and Brand Name -->
+      <a class="navbar-brand" href="index.html" style="display:flex; align-items:center;">
+        <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Code Crunch Club Logo" style="height:50px; width: auto;" />
+       305 Hackathon
+      </a>
 
         <!-- Mobile Toggle Button -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -666,7 +709,7 @@ body {
         <!-- Navbar Links -->
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="https://ba-00001.github.io/codecrunchclub">Code Crunch |</a></li>
+                
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#tracks">Tracks</a></li>
                 <li class="nav-item"><a class="nav-link" href="#awards">Awards</a></li>
@@ -1282,19 +1325,17 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
         <p>&copy; Code Crunch. All rights reserved.</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Bootstrap JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-   <!-- Font Awesome & Bootstrap JS contibutors -->
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
    
 
-    <script>
+
+
+<!-- Bootstrap JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
+
+   <!-- Font Awesome & Bootstrap JS contibutors -->
+   src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"
+   
+
 
 
 
@@ -1387,6 +1428,22 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
         generateDynamicProps();
         setInterval(regenerateProps, 10000); // Refresh props every 10 seconds
 
+ // NAV BAR TOGGLE FUNCTION COLLAPSE
+        document.addEventListener("DOMContentLoaded", function() {
+    var navLinks = document.querySelectorAll(".nav-link");
+    var navbarCollapse = document.querySelector(".navbar-collapse");
+
+    navLinks.forEach(function(link) {
+        link.addEventListener("click", function() {
+            if (navbarCollapse.classList.contains("show")) {
+                new bootstrap.Collapse(navbarCollapse).hide();
+            }
+        });
+    });
+});
+
+
+ // END NAV BAR TOGGLE FUNCTION COLLAPSE
 
     </script>
 
