--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -695,9 +695,8 @@ body {
     <div class="container">
         <!-- Brand Name -->
           <!-- Logo and Brand Name -->
-      <a class="navbar-brand" href="index.html" style="display:flex; align-items:center;">
-        <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Code Crunch Club Logo" style="height:50px; width: auto;" />
-       305 Hackathon
+      <a class="navbar-brand" href="305HACK-SPRING25.html" style="display:flex; align-items:center;">
+        <img src="https://github.com/user-attachments/assets/c359ccd5-2470-4ba5-a8fe-a32ee12a4e0a" alt="Code Crunch Club Logo" style="height:50px; width: auto;" />  305 Hackathon
       </a>
 
         <!-- Mobile Toggle Button -->
@@ -709,7 +708,7 @@ body {
         <!-- Navbar Links -->
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                
+                <li class="nav-item"><a class="nav-link" href="index.html">Code Crunch</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#tracks">Tracks</a></li>
                 <li class="nav-item"><a class="nav-link" href="#awards">Awards</a></li>
