--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -1022,7 +1022,7 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
     <h2 style="font-size: 2.5rem; font-weight: bold; color: #333; margin-bottom: 20px;">🎉 About 305 Tropical Hacks</h2>
     
     <p style="font-size: 1.3rem; color: #555; max-width: 900px; margin: 0 auto; line-height: 1.6;">
-        Welcome to <strong>305 Tropical Hacks</strong>, a premier hackathon in the heart of Miami! 
+        Welcome to <strong>305 Hacks</strong>, a premier hackathon in the heart of Miami! 
         This event brings together students, developers, and tech enthusiasts to build **innovative projects**, 
         solve real-world challenges, and network with **industry leaders**. Whether you're a beginner or an experienced coder, 
         there's something for everyone!
@@ -1320,7 +1320,7 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
 
 
     <footer>
-        <p>&copy; Spring 305 Hackathon. All rights reserved. | <a href="mailto:codecrunchhelp@outlook.com">codecrunchhelp@outlook.com</a></p>
+        <p>&copy; 305 Hackathon. All rights reserved. | <a href="mailto:codecrunchhelp@outlook.com">codecrunchhelp@outlook.com</a></p>
         <p>&copy; Code Crunch. All rights reserved.</p>
     </footer>
 
