--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -1019,7 +1019,7 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
  <!-- About Section -->
 <!-- About Section -->
 <section id="about" style="padding: 60px; text-align: center;">
-    <h2 style="font-size: 2.5rem; font-weight: bold; color: #333; margin-bottom: 20px;">🎉 About 305 Tropical Hacks</h2>
+    <h2 style="font-size: 2.5rem; font-weight: bold; color: #333; margin-bottom: 20px;">🌴 About 305 Hacks 🌴</h2>
     
     <p style="font-size: 1.3rem; color: #555; max-width: 900px; margin: 0 auto; line-height: 1.6;">
         Welcome to <strong>305 Hacks</strong>, a premier hackathon in the heart of Miami! 
