--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -741,7 +741,7 @@ body {
                 <img src="https://github.com/user-attachments/assets/09e848e3-26b6-4cf1-a2ec-8c046cb20eba" 
                      alt="305 Tropical Hacks Flyer 1ST" 
                      style="width: 100%; height: auto; border-radius: 10px;">
-                <a href="https://forms.gle/EkFVXEzDbLQfCeLS8" 
+                <a href="https://forms.gle/9ejeRChF2xuQnWF27" 
                    style="display: flex; justify-content: center; align-items: center; margin-top: 15px; padding: 12px 30px; 
                           font-size: 1.5rem; font-weight: bold; text-decoration: none; border-radius: 25px; width: 250px; 
                           background: linear-gradient(135deg, #FF4D00, #FFB703); color: #FFFFFF; box-shadow: 4px 4px 0px #FF4D00; 
@@ -761,7 +761,7 @@ body {
                 <img src="https://github.com/user-attachments/assets/686c3b7e-5a12-4ef3-8bfc-c5994af77e10" 
                      alt="305 Tropical Hacks Flyer" 
                      style="width: 100%; height: auto; border-radius: 10px;">
-                <a href="https://forms.gle/22FiKu3sYd87jps19" 
+                <a href="https://forms.gle/9ejeRChF2xuQnWF27" 
                    style="display: flex; justify-content: center; align-items: center; margin-top: 15px; padding: 12px 30px; 
                           font-size: 1.5rem; font-weight: bold; text-decoration: none; border-radius: 25px; width: 250px; 
                           background: linear-gradient(135deg, #0073E6, #00B4D8); color: #FFFFFF; box-shadow: 4px 4px 0px #0073E6; 
