--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -752,7 +752,7 @@ body {
                    onmouseout="this.style.background='linear-gradient(135deg, #FF4D00, #FFB703)'; 
                                this.style.boxShadow='4px 4px 0px #FF4D00'; 
                                this.style.transform='translateY(0)';">
-                   Apply for Spring 2025
+                   Apply for 305 Spring
                 </a>
             </div>
     
@@ -761,7 +761,7 @@ body {
                 <img src="https://github.com/user-attachments/assets/686c3b7e-5a12-4ef3-8bfc-c5994af77e10" 
                      alt="305 Tropical Hacks Flyer" 
                      style="width: 100%; height: auto; border-radius: 10px;">
-                <a href="https://forms.gle/9ejeRChF2xuQnWF27" 
+                <a href="https://forms.gle/UZYKKG6B1Roj32yj8" 
                    style="display: flex; justify-content: center; align-items: center; margin-top: 15px; padding: 12px 30px; 
                           font-size: 1.5rem; font-weight: bold; text-decoration: none; border-radius: 25px; width: 250px; 
                           background: linear-gradient(135deg, #0073E6, #00B4D8); color: #FFFFFF; box-shadow: 4px 4px 0px #0073E6; 
@@ -772,9 +772,30 @@ body {
                    onmouseout="this.style.background='linear-gradient(135deg, #0073E6, #00B4D8)'; 
                                this.style.boxShadow='4px 4px 0px #0073E6'; 
                                this.style.transform='translateY(0)';">
-                   Apply for Fall 2025
+                   Apply for 305 Fall
                 </a>
             </div>
+
+            <!-- EmpowHER Fall 2025 Flyer -->
+            <div style="text-align: center; max-width: 400px;">
+                <img src="https://github.com/user-attachments/assets/31434f7e-68fe-45e7-915b-63254862ddab" 
+                     alt="305 Tropical Hacks Flyer" 
+                     style="width: 100%; height: auto; border-radius: 10px;">
+                <a href="https://forms.gle/UZYKKG6B1Roj32yj8" 
+                   style="display: flex; justify-content: center; align-items: center; margin-top: 15px; padding: 12px 30px; 
+                          font-size: 1.5rem; font-weight: bold; text-decoration: none; border-radius: 25px; width: 250px; 
+                          background: linear-gradient(135deg, #0073E6, #00B4D8); color: #FFFFFF; box-shadow: 4px 4px 0px #0073E6; 
+                          transition: all 0.3s ease-in-out;" 
+                   onmouseover="this.style.background='linear-gradient(135deg, #00B4D8, #0073E6)'; 
+                                this.style.boxShadow='6px 6px 0px #FFFFFF'; 
+                                this.style.transform='translateY(-3px)';"
+                   onmouseout="this.style.background='linear-gradient(135deg, #0073E6, #00B4D8)'; 
+                               this.style.boxShadow='4px 4px 0px #0073E6'; 
+                               this.style.transform='translateY(0)';">
+                   Apply for EmpowHER
+                </a>
+            </div>
+
         </div>
     
         <!-- EST. 2025 & Collaborators Button -->
