--- a/index.html
+++ b/index.html
@@ -686,6 +686,7 @@
     <div class="container">
         <!-- Unified Card -->
         <div class="card shadow-lg border-0">
+
             <!-- Card Header: Meet Our Club with Logo and EST. 2024 -->
             <div class="card-header bg-success text-white text-center" style="display: flex; align-items: center; justify-content: center; gap: 15px; flex-wrap: wrap;">
                 <h1 class="card-title mb-0">Meet Our Club</h1>
@@ -769,6 +770,7 @@
 <section style="padding: 50px; text-align: center;">
     <!-- Flyer & EST. 2025 Section -->
     <div style="display: flex; justify-content: center; align-items: center; gap: 40px; flex-wrap: wrap;">
+
         <!-- EST. 2025 Logo (on the side) -->
         <div style="display: flex; flex-direction: column; align-items: center;">
             <img src="https://github.com/user-attachments/assets/30568fdc-c31d-4260-8a24-7e62db85451a" 
@@ -788,6 +790,14 @@
         <!-- Fall 2025 Flyer -->
         <div style="text-align: center; max-width: 400px;">
             <img src="https://github.com/user-attachments/assets/686c3b7e-5a12-4ef3-8bfc-c5994af77e10" 
+                 alt="305 Tropical Hacks Flyer" 
+                 style="width: 100%; height: auto; border-radius: 10px;">
+ 
+        </div>
+
+          <!-- empowher Fall 2025 Flyer -->
+          <div style="text-align: center; max-width: 400px;">
+            <img src="https://github.com/user-attachments/assets/31434f7e-68fe-45e7-915b-63254862ddab" 
                  alt="305 Tropical Hacks Flyer" 
                  style="width: 100%; height: auto; border-radius: 10px;">
  
