--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -811,7 +811,7 @@ body {
         style="padding: 12px 20px; font-size: 1.2rem; font-weight: bold; 
                background: #0073E6; color: white; border: none; border-radius: 8px; 
                cursor: pointer; transition: background 0.3s, transform 0.3s;">
-        View FIU Collaborators <span id="arrow">🔽</span>
+        View FIU Collaborators for 305 Hacks<span id="arrow">🔽</span>
     </button>
 </div>
 
