--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -811,7 +811,7 @@ body {
         style="padding: 12px 20px; font-size: 1.2rem; font-weight: bold; 
                background: #0073E6; color: white; border: none; border-radius: 8px; 
                cursor: pointer; transition: background 0.3s, transform 0.3s;">
-        View FIU Collaborators for 305 Hacks<span id="arrow">🔽</span>
+        View FIU Collaborators for 305 H<span id="arrow">🔽</span>
     </button>
 </div>
 
@@ -1285,7 +1285,7 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
 <!-- Donor Prospectus -->
 <div class="dashed-box">
     <p>View our Donor Prospectus:</p>
-    <a href="https://ba-00001.github.io/codecrunchclub/assets/305-HACKATHON-Prospectus.pdf" 
+    <a href="https://github.com/user-attachments/files/19045785/305-HACKATHON-Prospectus.pdf" 
     class="prospectus-btn" 
     download>
     <i class="fas fa-file-download"></i> Download Prospectus
