--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
             
             <!-- Buttons Below Flyer -->
             <div style="margin-top: 15px;">
-                <a href="#" style="margin: 5px; padding: 10px 20px; font-size: 1rem; font-weight: bold; text-decoration: none; border-radius: 8px; background: #007BFF; color: white;">Learn More</a>
+                <a href="HACKFIESTA-SPRING25.HTML" style="margin: 5px; padding: 10px 20px; font-size: 1rem; font-weight: bold; text-decoration: none; border-radius: 8px; background: #007BFF; color: white;">Learn More</a>
                 <a href="https://forms.gle/UZYKKG6B1Roj32yj8" style="margin: 5px; padding: 10px 20px; font-size: 1rem; font-weight: bold; text-decoration: none; border-radius: 8px; background: #FF4D00; color: white;">Register Now</a>
             </div>
         </div>
