--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -447,7 +447,7 @@
 
 <!-- Footer -->
 <footer>
-    <p>&copy; HackFiesta Miami 2025 | Contact: hackfiestamiami@gmail.com</p>
+    <p>&copy; HackFiesta Miami | Contact: codecrunchclub@gmail.com</p>
 </footer>
 
 <!-- Bootstrap JavaScript -->
