Change color of play button

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             padding: 2rem 4rem;
-            background: #ad00ff;
+            background: #DF8E40;
             color: white;
             font-size: 2rem;
             font-weight: bold;
@@ -397,7 +397,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #ad00ff;
+            background: #DF8E40;
         }
         /* Expand icon (arrows) */
         .fullscreen .play-btn::before {
