--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -1285,7 +1285,7 @@ onmouseover="this.style.transform='translateY(-5px)';" onmouseout="this.style.tr
 <!-- Donor Prospectus -->
 <div class="dashed-box">
     <p>View our Donor Prospectus:</p>
-    <a href="https://github.com/user-attachments/files/19045785/305-HACKATHON-Prospectus.pdf" 
+    <a href="cc-prospectus.html" 
     class="prospectus-btn" 
     download>
     <i class="fas fa-file-download"></i> Download Prospectus
