--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -436,7 +436,7 @@
         </div>
         <div class="window-box">
             <p>View our Donor Prospectus:</p>
-            <a href="#" class="prospectus-btn" download>
+            <a href="cc-prospectus.html" class="prospectus-btn" download>
                 <i class="fas fa-file-download"></i> Download Prospectus
             </a>
         </div>
