--- a/about.html
+++ b/about.html
@@ -208,22 +208,23 @@
             </div>
           </div>
 
-          <!-- Ashley Prado -->
+          <!-- Zeze Khatib -->
           <div class="col-lg-4 col-md-6 mb-5" data-aos="fade-up">
             <div class="card h-100">
-              <img class="card-img-top" src="https://github.com/user-attachments/assets/b39b7a78-c1c8-407d-b073-998fcf1aaa34" alt="Ashley Prado - Tech Lead" />
+              <img class="card-img-top" src="https://github.com/user-attachments/assets/ebc72fc3-49eb-4d29-af56-9ccc1e1228cb" alt="Zeze Khatib" />
               <div class="card-body">
-                <h5 class="fw-bold">Ashley Prado</h5>
-                <p class="mb-0">Vice President & Tech Engagement Chair C11</p>
+                <h5 class="fw-bold">Zeze Khatib</h5>
+                <p class="mb-0">Vice President</p>
                 <p class="mb-2 text-muted">Pronouns: She/Her</p>
-                <p class="mt-3">Junior @FIU majoring in Computer Science</p>
-                <p class="mt-3">Ashley is dedicated to using technology to solve real-world problems and empower her community.</p>
-                <a href="https://www.linkedin.com/in/ashley-prado/" target="_blank" class="linkedin-icon">
+                <p class="mt-3">Sophomore @FIU majoring in International Business & Sales and CRM</p>
+                <p class="mt-3">Zeze is passionate about leveraging business strategies and technology to drive impactful change and empower her community.</p>
+                <a href="https://www.linkedin.com/in/zenab-khatib-b91850290/" target="_blank" class="linkedin-icon">
                   <i class="bi bi-linkedin"></i> LinkedIn
                 </a>
               </div>
             </div>
           </div>
+
 
 
           <!-- Amilcar -->
