--- a/about.html
+++ b/about.html
@@ -264,7 +264,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/7d0db14a-f473-41be-99b6-080d0066b4ca" alt="Mariana Phelan - Tech Lead" />
               <div class="card-body">
                 <h5 class="fw-bold">Mariana Phelan</h5>
-                <p class="mb-0">Logistics Chair 3 & Marketing Chair</p>
+                <p class="mb-0">Dir. Marketing Chair & Logistics</p>
                 <p class="mb-2 text-muted">Pronouns: She/Her</p>
                 <p class="mt-3">Junior @FIU majoring in Computer Science.</p>
                 <p class="mt-3">Born and raised in Caracas, Venezuela. I aspire to become a Software Engineer at a top tech company and eventually the CEO of my own firm while exploring new cultures.</p>
@@ -281,7 +281,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/715871d8-3d0f-48b9-9983-020dce3e1a7f" alt="Arnold Miranda-Pino - Tech Lead" />
               <div class="card-body">
                 <h5 class="fw-bold">Arnold Miranda-Pino</h5>
-                <p class="mb-0">Dir. of Operations & Tech Engagement Chair C3 | C4</p>
+                <p class="mb-0">Dir. of Operations </p>
                 <p class="mb-2 text-muted">Pronouns: He/Him</p>
                 <p class="mt-3">Junior @FIU majoring in Computer Science.</p>
                 <p class="mt-3">Arnold, of Cuban descent, is passionate about web and app development and enjoys working with TypeScript. He has supported new students and helped design a mobile app workshop using Agile methods.</p>
@@ -434,8 +434,98 @@
               </div>
             </div>
           </div>
+
+
+          <!-- Raysa Nolasco -->
+        <div class="col-lg-4 col-md-6 mb-5" data-aos="fade-up">
+          <div class="card h-100">
+            <img class="card-img-top" src="https://github.com/user-attachments/assets/589bfeea-ae37-49fa-8411-2dcc5ef2055c" alt="Raysa Nolasco" />
+            <div class="card-body">
+              <h5 class="fw-bold">Raysa Nolasco</h5>
+              <p class="mb-0">Mechanical Engineering Representative</p>
+              <p class="mb-2 text-muted">Pronouns: She/Her</p>
+              <p class="mb-0">C12 Tech Engagement Chair</p>
+              <p class="mb-2 text-muted">Pronouns: She/Her</p>
+              <p class="mt-3">Sophomore @FIU majoring in Mechanical Engineering, passionate about design, modeling, and manufacturing processes.</p>
+              <p class="mt-3">Raysa co-leads **C12 | Crunch 3D: CAD and Modeling**, empowering students to develop hands-on skills in **3D modeling, CAD software, and engineering design** to bring innovative ideas to life.</p>
+              <a href="https://www.linkedin.com/in/this-is-raysa-nolasco/" target="_blank" class="linkedin-icon">
+                <i class="bi bi-linkedin"></i> LinkedIn
+              </a>
+            </div>
+          </div>
+        </div>
+
+<!-- Jorge Marin Matute -->
+<div class="col-lg-4 col-md-6 mb-5" data-aos="fade-up">
+  <div class="card h-100">
+    <img class="card-img-top" src="https://github.com/user-attachments/assets/ddc8dc0b-26ae-42ea-8911-78f5788ade51" alt="Jorge Marin Matute" />
+    <div class="card-body">
+      <h5 class="fw-bold">Jorge Marin Matute</h5>
+      <p class="mb-0">Co-Lead, C12 | Crunch 3D: CAD and Modeling</p>
+      <p class="mb-2 text-muted">Pronouns: He/Him</p>
+      <p class="mt-3">Junior @FIU majoring in Mechanical Engineering, passionate about CAD design, simulation, and manufacturing processes.</p>
+      <p class="mt-3">Jorge co-leads **C12 | Crunch 3D: CAD and Modeling**, helping students develop expertise in **3D modeling, SolidWorks, and engineering design principles** to bring innovative concepts to reality.</p>
+      <a href="https://www.linkedin.com/in/jorge-marin-matute-574680339/" target="_blank" class="linkedin-icon">
+        <i class="bi bi-linkedin"></i> LinkedIn
+      </a>
+    </div>
+  </div>
+</div>
+
+
+
+
+          <!-- Francesco Martinot -->
+          <div class="col-lg-4 col-md-6 mb-5" data-aos="fade-up">
+            <div class="card h-100">
+              <img class="card-img-top" src="https://github.com/user-attachments/assets/b3d39db2-db4c-48fd-a1b4-d7dfb368c7db" alt="Francesco Martinot" />
+              <div class="card-body">
+                <h5 class="fw-bold">Francesco Martinot</h5>
+                <p class="mb-0">Lead, C14 | Crunch Linux</p>
+                <p class="mb-2 text-muted">Pronouns: He/Him</p>
+                <p class="mt-3">Junior @FIU majoring in Computer Science with a passion for cybersecurity, networking, and Linux systems.</p>
+                <p class="mt-3">As the **Lead of C14 | Crunch Linux**, Francesco is committed to equipping students with **hands-on experience in Linux fundamentals, shell scripting, system administration, and security practices** to build a strong technical foundation.</p>
+                <a href="https://www.linkedin.com/in/francesco-martinot-432b63245/" target="_blank" class="linkedin-icon">
+                  <i class="bi bi-linkedin"></i> LinkedIn
+                </a>
+              </div>
+            </div>
+          </div>
+
+
+          <!-- Evelio Gonzalez -->
+        <div class="col-lg-4 col-md-6 mb-5" data-aos="fade-up">
+          <div class="card h-100">
+            <img class="card-img-top" src="https://github.com/user-attachments/assets/d8983c48-8b3d-4c24-a857-b0cb013f746a" alt="Evelio Gonzalez" />
+            <div class="card-body">
+              <h5 class="fw-bold">Evelio Gonzalez</h5>
+              <p class="mb-0">Lead, C15 | Crunch DevOps & Tech Engagement Chair</p>
+              <p class="mb-2 text-muted">Pronouns: He/Him</p>
+              <p class="mt-3">Junior @FIU majoring in Computer Science, passionate about DevOps, cloud computing, and software engineering.</p>
+              <p class="mt-3">As the **Lead of C15 | Crunch DevOps** and **Tech Engagement Chair**, Evelio is dedicated to **helping students master DevOps tools and technologies**, including **CI/CD, Docker, Kubernetes, Terraform, and cloud infrastructure**, to build scalable and efficient applications.</p>
+              <a href="https://www.linkedin.com/in/evelio-gonzalez-77a3b5329/" target="_blank" class="linkedin-icon">
+                <i class="bi bi-linkedin"></i> LinkedIn
+              </a>
+            </div>
+          </div>
+        </div>
+
+
+
+
         </div>
       </div>
+
+
+
+
+
+
+
+
+
+
+
     </section>
   
     <!-- Footer -->
