--- a/about.html
+++ b/about.html
@@ -461,7 +461,7 @@
     <img class="card-img-top" src="https://github.com/user-attachments/assets/ddc8dc0b-26ae-42ea-8911-78f5788ade51" alt="Jorge Marin Matute" />
     <div class="card-body">
       <h5 class="fw-bold">Jorge Marin Matute</h5>
-      <p class="mb-0">Co-Lead, C12 | Crunch 3D: CAD and Modeling</p>
+      <p class="mb-0">C12 Tech Engagement Chair</p>
       <p class="mb-2 text-muted">Pronouns: He/Him</p>
       <p class="mt-3">Junior @FIU majoring in Mechanical Engineering, passionate about CAD design, simulation, and manufacturing processes.</p>
       <p class="mt-3">Jorge co-leads **C12 | Crunch 3D: CAD and Modeling**, helping students develop expertise in **3D modeling, SolidWorks, and engineering design principles** to bring innovative concepts to reality.</p>
@@ -481,7 +481,7 @@
               <img class="card-img-top" src="https://github.com/user-attachments/assets/b3d39db2-db4c-48fd-a1b4-d7dfb368c7db" alt="Francesco Martinot" />
               <div class="card-body">
                 <h5 class="fw-bold">Francesco Martinot</h5>
-                <p class="mb-0">Lead, C14 | Crunch Linux</p>
+                <p class="mb-0">C14 Tech Engagement Chair</p>
                 <p class="mb-2 text-muted">Pronouns: He/Him</p>
                 <p class="mt-3">Junior @FIU majoring in Computer Science with a passion for cybersecurity, networking, and Linux systems.</p>
                 <p class="mt-3">As the **Lead of C14 | Crunch Linux**, Francesco is committed to equipping students with **hands-on experience in Linux fundamentals, shell scripting, system administration, and security practices** to build a strong technical foundation.</p>
@@ -499,7 +499,7 @@
             <img class="card-img-top" src="https://github.com/user-attachments/assets/d8983c48-8b3d-4c24-a857-b0cb013f746a" alt="Evelio Gonzalez" />
             <div class="card-body">
               <h5 class="fw-bold">Evelio Gonzalez</h5>
-              <p class="mb-0">Lead, C15 | Crunch DevOps & Tech Engagement Chair</p>
+              <p class="mb-0">C15 Tech Engagement Chair</p>
               <p class="mb-2 text-muted">Pronouns: He/Him</p>
               <p class="mt-3">Junior @FIU majoring in Computer Science, passionate about DevOps, cloud computing, and software engineering.</p>
               <p class="mt-3">As the **Lead of C15 | Crunch DevOps** and **Tech Engagement Chair**, Evelio is dedicated to **helping students master DevOps tools and technologies**, including **CI/CD, Docker, Kubernetes, Terraform, and cloud infrastructure**, to build scalable and efficient applications.</p>
