--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
           If you encounter any issues with accessing our resources or have questions about Code Crunch:
         </p>
         <a href="mailto:codecrunchhelp@outlook.com" class="btn btn-lg btn-success">
-          <i class="bi bi-envelope"></i> Contact Support Team
+          <i class="bi bi-envelope"></i> Contact Support Team (codecrunchhelp@outlook.com)
         </a>
       </div>
     </section>
